# simpleline

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: ci.yml
autoload/: simpleline.vim
doc/: simpleline.txt
lib/: simpleline-daemon
plugin/: simpleline.vim
src/simpleline/: simpleline_daemon.rs
tests/vim/: config_types.vim  daemon_protocol.vim  layout.vim  run.vim
