[package]
name = "simpleline"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
description = "A lightweight Vim9 statusline and buffer tabline with an asynchronous Git daemon"
repository = "https://github.com/beamiter/simpleline"
readme = "README.md"
publish = false

[[bin]]
name = "simpleline-daemon"
path = "src/simpleline/simpleline_daemon.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "process", "time"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
